// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MediaPlayer Calls the canonical placeholder when platform is canonical and showPlaceholder is true 1`] = `
.emotion-23 {
  margin: 0;
  padding-bottom: 1.5rem;
  width: 100%;
}

.emotion-21 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

.emotion-19 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: default;
}

.emotion-4 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.125rem;
  width: 100%;
  height: 100%;
  position: absolute;
  border: 0.0625rem solid transparent;
  color: #FFFFFF;
  background-color: rgba(34,34,34,0.75);
}

@media (min-width:37.5rem) {
  .emotion-4 {
    font-size: 0.875rem;
  }
}

@media screen and (-ms-high-contrast:active) {
  .emotion-4 {
    background-color: transparent;
  }
}

.no-js .emotion-4 {
  background-color: rgba(34,34,34,0.75);
}

@media screen and (-ms-high-contrast:active) {
  .no-js .emotion-4 {
    background-color: transparent;
  }
}

.no-js .emotion-4 .guidance-message {
  display: none;
}

.emotion-0 {
  display: block;
  font-weight: normal;
  padding: 0.5rem;
  border-bottom: 0.0625rem solid transparent;
}

@media screen and (-ms-high-contrast:active) {
  .emotion-0 {
    background-color: window;
  }
}

@media (min-width:25rem) {
  .emotion-0 {
    padding: 1rem;
  }
}

.emotion-2 {
  position: absolute;
  bottom: 0;
}

.emotion-15 {
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  height: 5rem;
  padding: 0;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  width: 5rem;
  position: absolute;
  bottom: 0;
}

.emotion-15:hover,
.emotion-15:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

.no-js .emotion-15 {
  display: none;
}

.emotion-20:hover .emotion-15,
.emotion-20:focus .emotion-15 {
  background-color: #B80000;
}

.emotion-6 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-10 > svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  margin-top: 0.5rem;
  width: 1.5rem;
}

.emotion-8 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-12 {
  display: block;
  margin-top: 0.5rem;
}

.emotion-17 {
  display: block;
  width: 100%;
  visibility: visible;
}

<div>
  <figure
    class="emotion-23 emotion-24"
  >
    <div
      class="emotion-21 emotion-22"
    >
      <div
        class="emotion-19 emotion-20"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <strong
            aria-hidden="true"
            class="guidance-message emotion-0 emotion-1"
          >
            Contains strong language and adult humour.
          </strong>
          <noscript
            class="emotion-2 emotion-3"
          />
        </div>
        <button
          class="emotion-14 emotion-15 emotion-16"
        >
          <span
            class="emotion-6 emotion-7"
          >
            Contains strong language and adult humour. Play video, "Five things ants can teach us about management", Duration 3,11
          </span>
          <div
            aria-hidden="true"
            class="emotion-10 emotion-11"
          >
            <svg
              aria-hidden="true"
              class="emotion-8 emotion-9"
              focusable="false"
              height="12px"
              viewBox="0 0 32 32"
              width="12px"
            >
              <polygon
                points="3,32 29,16 3,0"
              />
            </svg>
          </div>
          <time
            aria-hidden="true"
            class="emotion-12 emotion-13"
            datetime="PT3M11S"
          >
            03:11
          </time>
        </button>
        <img
          alt=""
          class="emotion-17 emotion-18"
          src="https://ichef.test.bbci.co.uk/images/ic/512xn/p01k6mtv.jpg"
          srcset="https://ichef.test.bbci.co.uk/images/ic/240xn/p01k6mtv.jpg 240w, https://ichef.test.bbci.co.uk/images/ic/320xn/p01k6mtv.jpg 320w, https://ichef.test.bbci.co.uk/images/ic/480xn/p01k6mtv.jpg 480w, https://ichef.test.bbci.co.uk/images/ic/624xn/p01k6mtv.jpg 624w, https://ichef.test.bbci.co.uk/images/ic/800xn/p01k6mtv.jpg 800w"
        />
      </div>
    </div>
  </figure>
</div>
`;

exports[`MediaPlayer Does not Call the canonical placeholder when platform is canonical but showPlaceholder is false 1`] = `
.emotion-4 {
  margin: 0;
  padding-bottom: 1.5rem;
  width: 100%;
}

.emotion-2 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

.emotion-0 {
  border: 0;
  left: 0;
  overflow: hidden;
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

<div>
  <figure
    class="emotion-4 emotion-5"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <iframe
        allow="autoplay; fullscreen"
        allowfullscreen=""
        class="emotion-0 emotion-1"
        scrolling="no"
        src="https://test.bbc.com/ws/av-embeds/articles/c123456789o/p01k6msp/en-GB"
        title="Media player"
      />
      <noscript />
    </div>
  </figure>
</div>
`;

exports[`MediaPlayer Renders the AMP player when platform is AMP 1`] = `
.emotion-2 {
  margin: 0;
  padding-bottom: 1.5rem;
  width: 100%;
}

.emotion-0 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

<div>
  <figure
    class="emotion-2 emotion-3"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <amp-iframe
        allowfullscreen="allowfullscreen"
        frameborder="0"
        layout="fill"
        sandbox="allow-scripts allow-same-origin"
        scrolling="no"
        src="https://polling.test.bbc.co.uk/ws/av-embeds/articles/c123456789o/p01k6msp/en-GB/amp"
        title="Media player"
      >
        <amp-img
          alt=""
          attribution=""
          height="16"
          layout="fill"
          placeholder="true"
          src="https://ichef.test.bbci.co.uk/images/ic/512xn/p01k6mtv.jpg"
          srcset="https://ichef.test.bbci.co.uk/images/ic/240xn/p01k6mtv.jpg 240w, https://ichef.test.bbci.co.uk/images/ic/320xn/p01k6mtv.jpg 320w, https://ichef.test.bbci.co.uk/images/ic/480xn/p01k6mtv.jpg 480w, https://ichef.test.bbci.co.uk/images/ic/624xn/p01k6mtv.jpg 624w, https://ichef.test.bbci.co.uk/images/ic/800xn/p01k6mtv.jpg 800w"
          width="9"
        />
        <noscript />
      </amp-iframe>
    </div>
  </figure>
</div>
`;
